--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "sass": "^1.83.0",
+    "swiper": "^11.1.15",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
